force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/tc9_pr__Withholding_Rule_Item__c.object-meta.xml
<CustomObject>
    <label>Withholding Rule Item</label>
    <nameField>
        <label>Withholding Rule Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Withholding Rule Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>