force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_et__Superannuation_Invoiceable_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Superannuation_Invoiceable_Rate__c</fullName>
    <description>Defines what rate will be used in calculating the amount invoiceable</description>
    <inlineHelpText>Defines what rate will be used in calculating the amount invoiceable</inlineHelpText>
    <label>Superannuation Invoiceable Rate</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>