force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__Additional_Rate_Max_Earnings__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Additional_Rate_Max_Earnings__c</fullName>
    <description>Maximum annual taxable earnings for Additional Rate.</description>
    <inlineHelpText>Maximum annual taxable earnings for Additional Rate.</inlineHelpText>
    <label>Additional Rate Max Earnings</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>