force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Birth_Date__c</fullName>
    <description>Used for Preservation Age assessment.</description>
    <inlineHelpText>Used for Preservation Age assessment.</inlineHelpText>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>