force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__Cap_Applied__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Cap_Applied__c</fullName>
    <description>Indicates which ETP cap will be applied during Payee Exit calculations.</description>
    <inlineHelpText>Indicates which ETP cap will be applied during Payee Exit calculations.</inlineHelpText>
    <label>Cap Applied</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ETP</fullName>
            </value>
            <value>
                <fullName>WOI</fullName>
            </value>
            <value>
                <fullName>Lesser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>