force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__Cap_Assessment__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Cap_Assessment__c</fullName>
    <description>Indicates which ETP cap was applied.</description>
    <inlineHelpText>Indicates which ETP cap was applied.</inlineHelpText>
    <label>Cap Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Up To Cap</fullName>
            </value>
            <value>
                <fullName>Any Amount</fullName>
            </value>
            <value>
                <fullName>Over Cap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>