force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__Coefficient_B__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Coefficient_B__c</fullName>
    <description>Coefficient B value as prescribed by the ATO for this bracket within the relevant tax scale.</description>
    <inlineHelpText>Coefficient B value as prescribed by the ATO for this bracket within the relevant tax scale.</inlineHelpText>
    <label>Coefficient B</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>