force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__Concessional_Contribution_Cap__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Concessional_Contribution_Cap__c</fullName>
    <description>Annual maximum for employee and pre-tax super contributions</description>
    <inlineHelpText>Annual maximum for employee and pre-tax super contributions</inlineHelpText>
    <label>Concessional Contribution Cap</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>