force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__ETP_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__ETP_Type__c</fullName>
    <description>Indicates whether this is a Life ETP or a Death ETP record used during the calculation process.</description>
    <inlineHelpText>Indicates whether this is a Life ETP or a Death ETP record used during the calculation process.</inlineHelpText>
    <label>ETP Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Life Benefit Genuine</fullName>
            </value>
            <value>
                <fullName>Life Benefit Discretionary</fullName>
            </value>
            <value>
                <fullName>Death Benefit Non Dependant</fullName>
            </value>
            <value>
                <fullName>Death Benefit Dependant</fullName>
            </value>
            <value>
                <fullName>Death Benefit Trustee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>