force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__GST_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__GST_Rate__c</fullName>
    <description>The standard rate of Goods and Services Tax to be applied during payroll calculation</description>
    <inlineHelpText>The standard rate of Goods and Services Tax to be applied during payroll calculation</inlineHelpText>
    <label>GST Rate</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>