force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__Intermediate_Rate_Percent__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Intermediate_Rate_Percent__c</fullName>
    <description>Taxation rate percentage for Intermediate Rate.</description>
    <inlineHelpText>Taxation rate percentage for Intermediate Rate.</inlineHelpText>
    <label>Intermediate Rate %</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>