force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__Maximum_Rate_Percent__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Maximum_Rate_Percent__c</fullName>
    <description>Maximum Taxation rate percentage.</description>
    <inlineHelpText>Maximum Taxation rate percentage.</inlineHelpText>
    <label>Maximum Rate %</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>