force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__Maximum_Super_Contribution_Base__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Maximum_Super_Contribution_Base__c</fullName>
    <description>The maximum quarterly earnings on which Superannuation has to be calculated.  At employer’s discretion.</description>
    <inlineHelpText>The maximum quarterly earnings on which Superannuation has to be calculated.  At employer’s discretion.</inlineHelpText>
    <label>Maximum Super Contribution Base</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>