force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__Minimum_Monthly_Earnings__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Minimum_Monthly_Earnings__c</fullName>
    <description>The minimum monthly earnings prescribed by the ATO before Superannuation must be calculated</description>
    <inlineHelpText>The minimum monthly earnings prescribed by the ATO before Superannuation must be calculated</inlineHelpText>
    <label>Minimum Monthly Earnings</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>