force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__Payroll_Tax_Diminishing__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payroll_Tax_Diminishing__c</fullName>
    <description>Indicates whether a diminishing factor should be applied during the payroll tax calculation</description>
    <label>Payroll Tax Diminishing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>