force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__Payroll_Tax_Diminishing_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payroll_Tax_Diminishing_Rate__c</fullName>
    <description>The diminishing factor to be applied during the payroll tax calculation for Australia.</description>
    <label>Payroll Tax Diminishing Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>