force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__Payroll_Tax_Minimum_Wages__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payroll_Tax_Minimum_Wages__c</fullName>
    <description>The minimum Wages  threshold for Australian Payroll Tax</description>
    <label>Payroll Tax Minimum Wages</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>