force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__Payroll_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payroll_Tax_Rate__c</fullName>
    <description>The Australian Payroll Tax Rate of this Withholding Rule Item</description>
    <label>Payroll Tax Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>