force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__Preservation_Age__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Preservation_Age__c</fullName>
    <description>The preservation age used for assessment during Payee Exit.</description>
    <inlineHelpText>The preservation age used for assessment during Payee Exit.</inlineHelpText>
    <label>Preservation Age</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>