force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__Superannuation_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Superannuation_Rate__c</fullName>
    <description>The rate at which super should be calculated on superannuable earnings. Default to 0.</description>
    <inlineHelpText>The rate at which super should be calculated on superannuable earnings. Default to 0.</inlineHelpText>
    <label>Superannuation Rate</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>