force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__UK_EE_Rate_LEL_to_PT__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_EE_Rate_LEL_to_PT__c</fullName>
    <description>The UK NI Employee rate for earnings from the Lower Earnings Limit to the Primary Threshold.</description>
    <inlineHelpText>The UK NI Employee rate for earnings from the Lower Earnings Limit to the Primary Threshold.</inlineHelpText>
    <label>UK EE Rate - LEL to PT</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>