force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__UK_EE_Rate_Over_UEL__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_EE_Rate_Over_UEL__c</fullName>
    <description>The UK NI Employee rate for earnings over the Upper Earnings Limit.</description>
    <inlineHelpText>The UK NI Employee rate for earnings over the Upper Earnings Limit.</inlineHelpText>
    <label>UK EE Rate - Over UEL</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>