force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__UK_EE_Rate_to_LEL__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_EE_Rate_to_LEL__c</fullName>
    <description>The UK NI Employee rate for earnings to the Lower Earnings Limit.</description>
    <inlineHelpText>The UK NI Employee rate for earnings to the Lower Earnings Limit.</inlineHelpText>
    <label>UK EE Rate - to LEL</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>