force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__UK_ER_Rate_CUST_to_UST__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_ER_Rate_CUST_to_UST__c</fullName>
    <description>The UK NI Employer rate for earnings from the category-specific Upper Secondary Threshold to the Upper Secondary Threshold.</description>
    <inlineHelpText>The UK NI Employer rate for earnings from the category-specific Upper Secondary Threshold to the Upper Secondary Threshold.</inlineHelpText>
    <label>UK ER Rate - CUST to UST</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>