force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__UK_ER_Rate_LEL_to_ST__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_ER_Rate_LEL_to_ST__c</fullName>
    <description>The UK NI Employer rate for earnings from the Lower Earnings Limit to the Secondary Threshold.</description>
    <inlineHelpText>The UK NI Employer rate for earnings from the Lower Earnings Limit to the Secondary Threshold.</inlineHelpText>
    <label>UK ER Rate - LEL to ST</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>