force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__UK_ER_Rate_Over_UST__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_ER_Rate_Over_UST__c</fullName>
    <description>The UK NI Employer rate for earnings over the Upper Secondary Threshold.</description>
    <inlineHelpText>The UK NI Employer rate for earnings over the Upper Secondary Threshold.</inlineHelpText>
    <label>UK ER Rate - Over UST</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>