force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__UK_ER_Rate_ST_to_CUST__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_ER_Rate_ST_to_CUST__c</fullName>
    <description>The UK NI Employer rate from the Secondary Threshold to the category-specific Upper Secondary Threshold.</description>
    <inlineHelpText>The UK NI Employer rate from the Secondary Threshold to the category-specific Upper Secondary Threshold.</inlineHelpText>
    <label>UK ER Rate - ST to CUST</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>