force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__UK_NI_Category_Description__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_NI_Category_Description__c</fullName>
    <description>A description of the UK NI Category.</description>
    <inlineHelpText>A description of the UK NI Category.</inlineHelpText>
    <label>UK NI Category Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>