force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__UK_Student_Loan_Annual_Threshold__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_Student_Loan_Annual_Threshold__c</fullName>
    <description>The annual threshold after which UK student loan calculations can be considered.</description>
    <inlineHelpText>The annual threshold after which UK student loan calculations can be considered.</inlineHelpText>
    <label>UK Student Loan Annual Threshold</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>