force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__UK_Student_Loan_Plan__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_Student_Loan_Plan__c</fullName>
    <description>The UK Student Loan Plan that this Withholding Rule Item will be used for during a Pay Batch calculation.</description>
    <inlineHelpText>The UK Student Loan Plan that this Withholding Rule Item will be used for during a Pay Batch calculation.</inlineHelpText>
    <label>UK Student Loan Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__UK_Student_Loan_Plan_Picklists</valueSetName>
    </valueSet>
</CustomField>