force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__UK_Student_Loan_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_Student_Loan_Rate__c</fullName>
    <description>The UK student loan rate that will be applied to applicable earnings.</description>
    <inlineHelpText>The UK student loan rate that will be applied to applicable earnings.</inlineHelpText>
    <label>UK Student Loan Rate</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>