force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__Weekly_Minimum_Earnings__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Weekly_Minimum_Earnings__c</fullName>
    <description>The minimum weekly earnings prescribed by the ATO for each bracket within the relevant tax scale.</description>
    <inlineHelpText>The minimum weekly earnings prescribed by the ATO for each bracket within the relevant tax scale.</inlineHelpText>
    <label>Weekly Minimum Earnings</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>