force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/fields/tc9_pr__Withholding_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Withholding_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Withholding Rule this record is related to</description>
    <inlineHelpText>The Withholding Rule this record is related to</inlineHelpText>
    <label>Withholding Rule</label>
    <referenceTo>tc9_pr__Withholding_Rule__c</referenceTo>
    <relationshipLabel>Withholding Rule Items</relationshipLabel>
    <relationshipName>Withholding_Rule_Items</relationshipName>
    <type>Lookup</type>
</CustomField>