force-app/main/default/objects/tc9_pr__Withholding_Rule_Item__c/listViews/tc9_pr__All.listView-meta.xml
<ListView>
    <fullName>tc9_pr__All</fullName>
    <columns>NAME</columns>
    <columns>tc9_pr__Withholding_Rule__c</columns>
    <columns>tc9_pr__Weekly_Minimum_Earnings__c</columns>
    <columns>tc9_pr__Weekly_Maximum_Earnings__c</columns>
    <columns>tc9_pr__Coefficient_A__c</columns>
    <columns>tc9_pr__Coefficient_B__c</columns>
    <columns>tc9_pr__Concessional_Contribution_Cap__c</columns>
    <columns>tc9_pr__Minimum_Monthly_Earnings__c</columns>
    <columns>tc9_pr__Maximum_Super_Contribution_Base__c</columns>
    <columns>tc9_pr__Superannuation_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>